@startuml
'https://plantuml.com/class-diagram

package model{

    class Planet{
        - String name;
        - Mass mass;
        - Diameter diameter;
        - boolean hasRings;
        - boolean hasMoons;
        --getters & setters--
    }

    class PlanetarySystem{
        - long id;
        - String name;
        --getters & setters--
    }

    class StatisticsInfo<T extends Comparable<T>>{
        - T attribute;
        - int numberOfRepetitions;
        --getters & setters--
        + void incrementNumberOfRepetitions();
    }

    package si.data{
        abstract class SIBasicPhysicalQuantity{
         # double value;
        }
        class Diameter{
            - SIUnitLength unit;
            --getters & setters--
        }

        class Mass{
            - SIUnitMass unit;
            --getters & setters--
        }

        enum SIUnitLength {
            METER,
            KILOMETER,
            CENTIMETER,
        }

        enum SIUnitMass {
            KILOGRAM,
            GRAM,
        }

    }
}

SIBasicPhysicalQuantity <|-- Diameter
SIBasicPhysicalQuantity <|-- Mass

Planet *-- Diameter
Planet *-- Mass
Planet *-- PlanetarySystem


Diameter *-- SIUnitLength
Mass *-- SIUnitMass

@enduml